--- a/src/css/index.css
+++ b/src/css/index.css
@@ -89,8 +89,8 @@ input {
   transform: scale(1.65);
 }
 
-.photo-container .not-found {
-  width: 100%;
+.photo-container .NotFound {
+  width: -webkit-fill-available;
 }
 
 @media only screen and (max-width: 767px)  {
